<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.cgi.privsense</groupId>
	<artifactId>privsense-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>PrivSense</name>
	<description>Application for scanning database and detecting PII</description>

	<modules>
		<module>privsense-common</module>
		<module>privsense-dbscanner</module>
		<module>privsense-piidetector</module>
		<module>privsense-web</module>
	</modules>

	<properties>
		<java.version>21</java.version>
		<spring-boot.version>3.4.3</spring-boot.version>
		<springdoc-openapi.version>2.8.5</springdoc-openapi.version>
		<caffeine.version>3.1.8</caffeine.version>
		<lombok.version>1.18.30</lombok.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Spring Boot BOM -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Internal module dependencies -->
			<dependency>
				<groupId>com.cgi.privsense</groupId>
				<artifactId>privsense-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cgi.privsense</groupId>
				<artifactId>privsense-dbscanner</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cgi.privsense</groupId>
				<artifactId>privsense-piidetector</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Third-party dependencies with versions managed centrally -->
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.ben-manes.caffeine</groupId>
				<artifactId>caffeine</artifactId>
				<version>${caffeine.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<compilerArgs>
							<arg>-parameters</arg>
						</compilerArgs>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<!-- Add this section to ensure the plugin is applied to all modules -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>